# DirViewApp

./: App.qml  CMakeLists.txt  README.md  filesystemmodel.cpp  filesystemmodel.h  index.cpp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  appdivview_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.cmake/api/v1/reply/: codemodel-v2-ba600fa3fc9d23d9067f.json  directory-.-Release-67a7ddcbf23d188f95ef.json  index-2023-10-15T16-32-29-0140.json  target-all_qmllint-Release-4df09510b4268f65a078.json  target-all_qmllint_json-Release-1805ceb5f6dcb4fc727c.json  target-all_qmllint_module-Release-49ac71ce4b796890a973.json  target-all_qmltyperegistrations-Release-514c11fa7855b36f9834.json  (+11 more)
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.cmake/api/v1/reply.prev/: cache-v2-7275217ec6658d5ae7c5.json  cmakeFiles-v1-aafd8c92524db9706406.json  codemodel-v2-d1bd298ff06f591671de.json  directory-.-Release-3b57755ef94b3b3f8a9e.json  index-2023-10-15T16-30-36-0693.json  target-all_qmllint-Release-8152a9471c69c4533494.json  target-all_qmllint_json-Release-ccb7222f3848f25571ff.json  target-all_qmllint_module-Release-b6836fde08b61e2ac4b4.json  target-all_qmltyperegistrations-Release-a395d79241b7a83134d3.json  target-appDivView-Release-7b48d7c5c40de936bf94.json  target-appDivView_autogen-Release-cce1e83ffc6ba3b60e4c.json  target-appDivView_autogen_timestamp_deps-Release-70411ea68110fb7452ca.json  target-appDivView_qmllint-Release-924213826b65380f53c7.json  target-appDivView_qmllint_json-Release-8d94ffa2ee09695eaa7d.json  target-appDivView_qmllint_module-Release-44141e4ae320461486db.json  target-appDivView_qmltyperegistration-Release-017f28bb660d434a0e04.json  target-appDivView_tooling-Release-1fb4b2305cf0bad7ffce.json
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.qt/deploy_qml_imports/: appDivView.cmake
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.qt_plugins/: Qt6_QmlPlugins_Imports_appDivView.cmake  Qt6_QmlPlugins_Imports_appDivView.rsp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.rcc/: appDivView_raw_qml_0.qrc  qmake_DivView.qrc  qrc_appDivView_raw_qml_0.cpp  qrc_qmake_DivView.cpp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.rcc/qmlcache/: appDivView_qml_loader_file_list.rsp  appDivView_qmlcache_loader.cpp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.rcc/qmlcache/appDivView_client/: App_qml.cpp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/DivView/: appDivView_qml_module_dir_map.qrc  qmldir
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/appDivView_autogen/: deps
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/appDivView_autogen/W7UEQSACOF/: moc_filesystemmodel.cpp  moc_filesystemmodel.cpp.d  moc_filesystemmodel.cpp.json
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/meta_types/: appDivView_json_file_list.txt.timestamp
builds/build-DivView-Desktop_Qt_6_5_2_MinGW_64_bit-Release/qmltypes/: appDivView_foreign_types.txt
client/: App.qml
client/src/components/: Icon.qml  Sidebar.qml
client/src/constants/: Colors.qml
client/src/events/: WindowDragHandler.qml
client/src/pages/: MyMenu.qml
server/: index.cpp
server/plugins/FileSystem/: filesystemmodel.cpp  filesystemmodel.h
src/components/: ResizeButton.qml
src/constants/: Colors.qml
src/events/: WindowDragHandler.qml
src/modules/: FileSystemView.qml  MyMenuBar.qml
src/pages/: About.qml
(+10 files in other folders)
